The real fix is to enable the printing of XUL docs, which is what is crashing.

The best we can do right now is not print XUL Docs. This patch checks to see if
it is a XUL document and if it is it idsplay a dialog and and doesn't Print or
Print Preview.
Bug 136185 r=dcone sr=attinasi